added forms links

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
           <div class="col-lg-8 mx-auto">
             <h2>Contact us</h2>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+            <h5>Have a suggestion for us? <a href="https://goo.gl/forms/4QdthhWtAT7DodkH3">
+              Submit here.</a></h5>
+            <h5>Wanna join our team? <a href="https://goo.gl/forms/Jrs0ofskRISOjBKF2">Submit here.</a></h5>
           </div>
         </div>
       </div>
