--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>About</h2>
-            <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
+            <p class="lead">We are a group of students from University Of Jordan, engineering department. We don't only love programming , but drink , eat and breath it too. 
+            If you ask any of us about our calendar you'll find it busy with projects , onsite and online contests and more of team working to make each other better than before . 
+            Our club is the best place for people who are interested in all programming-related subjects.</p>
             <ul>
               <li>Clickable nav links that smooth scroll to page sections</li>
               <li>Responsive behavior when clicking nav links perfect for a one page website</li>
@@ -90,6 +92,12 @@
           <div class="col-lg-8 mx-auto">
             <h2>Activities</h2>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
+            <ul>
+              <li><a href="problem-solving-spring-2018.html" target="_blank">Problem Solving training(spring 2018).</a></li>
+              <li><a href="">Java training(spring 2018).</a></li>
+              <li><a href="">JUCPC Contest preparations and organization (spring 2018).</a></li>
+              <li><a href="">JU Mirror Contest (summer 2018).</a></li>
+            </ul>
           </div>
         </div>
       </div>
