--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
             <ul>
               <li><a href="problem-solving-spring-2018.html">Problem Solving training(spring 2018).</a></li>
-              <li><a href="">Java training(spring 2018).</a></li>
-              <li><a href="">JUCPC Contest preparations and organization (spring 2018).</a></li>
-              <li><a href="">JU Mirror Contest (summer 2018).</a></li>
+              <li>Java training(spring 2018).</li>
+              <li>JUCPC Contest preparations and organization (spring 2018).</li>
+              <li>JU Mirror Contest (summer 2018).</li>
             </ul>
           </div>
         </div>
