--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
 
     </br>
 
-    <section id="activities" class="bg-light">
+    <section id="activities">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Activities</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
+            <p class="lead">Our team in the club makes sure that we have engaging activites every semester to keep our people in the club in a circle of learning new things in the university and apply them in our trainings after. Some of our actvites in past semesters are :</p>
             <ul>
-              <li><a href="problem-solving-spring-2018.html">Problem Solving training(spring 2018).</a></li>
+              <li><a href="/problem-solving-spring-2018.html">Problem Solving training(spring 2018).</a></li>
               <li>Java training(spring 2018).</li>
               <li>JUCPC Contest preparations and organization (spring 2018).</li>
               <li>JU Mirror Contest (summer 2018).</li>
