--- a/problem-solving-spring-2018.html
+++ b/problem-solving-spring-2018.html
@@ -60,6 +60,7 @@
 
           </br>
 
+          <div >
           <h4 id="pre">Prerequisites</h4>
           <ul>
             <li>Good knowledge about C++ basics; i.e. input/output , for loops , arrays .</li>
@@ -67,6 +68,7 @@
             <li><a href="http://codeforces.com/group/N716CDOV1U/blog">Joining Our university united group</a></li>
             <li>Make sure to join our club <a href="https://www.facebook.com/groups/SOEProgrammingClub/">group page on facebook</a></li>
           </ul>
+          </div>
 
           </br>
 
@@ -127,11 +129,13 @@
 
         </br>
 
+          
           <h4>Additional important materials related to general contests needs</h4>
           <ul>
             <li><a href="https://www.facebook.com/groups/SOEProgrammingClub/permalink/815520588649121/">Using freopen.</a></li>
             <li><a href="https://www.facebook.com/groups/SOEProgrammingClub/permalink/816900705177776/">JU-CPC Important instructions.</a></li>
           </ul>
+          
 
           </br>
 
