--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Activities</h2>
-            <p class="lead">Our team in the club makes sure that we have engaging activites every semester to keep our people in the club in a circle of learning new things in the university and apply them in our trainings after. Some of our actvites in past semesters are :</p>
+            <p class="lead">Our team in the club makes sure that we have engaging activites every semester to keep our people in the club in a circle of learning new things in the university and apply them in our trainings after. Some of our actvites in previous semesters are :</p>
             <ul>
               <li><a href="/problem-solving-spring-2018.html">Problem Solving training(spring 2018).</a></li>
               <li>Java training(spring 2018).</li>
