--- a/index.html
+++ b/index.html
@@ -70,15 +70,18 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>About</h2>
-            <p class="lead">We are a group of students from University Of Jordan, engineering department. We don't only love programming , but drink , eat and breath it too. 
-            If you ask any of us about our calendar you'll find it busy with projects , onsite and online contests and more of team working to make each other better than before . 
-            Our club is the best place for people who are interested in all programming-related subjects.</p>
+            <p class="lead">Our club was established in 2018 as a non-profit student initiative with support from the amazing professors in the computer engineering department at university of Jordan. Its goal was to engage students in learning and enjoying programming together with many diffrent and interactive activities. </p>
+            <p class="lead">We don't only love programming ,but drink, eat and breath it too. If you ask any of us about our calendar you'll find it busy with projects, onsite and online contests and much of team working to improve ourselves as much as we can. Our club is the best place for people who are interested in all programming related subjects. </p>  
+            <h3 class="lead">Our expected goals are:</h3>
             <ul>
-              <li>Clickable nav links that smooth scroll to page sections</li>
-              <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-              <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-              <li>Minimal custom CSS so you are free to explore your own unique design options</li>
+              <li> To improve our technical skills and prepare ourselves for the jobs and the labor market.</li>
+              <li>To increase the interaction and collaboration between students and help each other to grow a better community of programmers.</li>
+              <li>To raise our algorithmic and problem solving skills to participate in the regional and international contests like ICPC , IEEEXtreme ... etc.</li>
+              <li>Increase the students knowledge of open source and how to contribute to it.</li>
+              <li>Make workshops that talk about famous and important websites and programs for programmers like Github, LinkedIn and more.</li>
+              <li>Discuss important technological affairs and issues and their latest updates.</li>
             </ul>
+            <p class="lead">Club <a href="creators.html">creators</a> and <a href="volunteers.html">volunteers</a></p>
           </div>
         </div>
       </div>
@@ -110,7 +113,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Contact us</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+            <p class="lead">Once you feel this is the right place for you, and you would like to be a part of our amazing team, advise us, exchange our knowledge together, then join us, you will find us at anytime you ask for it.</p>
             <h5>Have a suggestion for us? <a href="https://goo.gl/forms/4QdthhWtAT7DodkH3">
               Submit here.</a></h5>
             <h5>Wanna join our team? <a href="https://goo.gl/forms/Jrs0ofskRISOjBKF2">Submit here.</a></h5>
