--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             <ul>
               <li><a href="/problem-solving-spring-2018.html">Problem Solving training(spring 2018).</a></li>
               <li>Java training(spring 2018).</li>
-              <li>JUCPC Contest preparations and organization (spring 2018).</li>
-              <li>JU Mirror Contest (summer 2018).</li>
+              <li><a href="https://drive.google.com/file/d/1CY31hfAIp0zg2_WzqTj3b5PhDRmWZWFa/view">JUCPC Contest preparations and organization (spring 2018).</a></li>
+              <li><a href="https://codeforces.com/group/N716CDOV1U/contest/225028">JU Mirror Contest (summer 2018).</a></li>
             </ul>
           </div>
         </div>
