--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       }
       .intro {
         width:100%;
-        background-image: url("1.jpg");
+        background-image: url("img/cover_photo.jpg");
         background-size: cover;
         margin-top:50px;
       }
@@ -96,8 +96,8 @@
             <h2>Activities</h2>
             <p class="lead">Our team in the club provides engaging activites every semester to keep our people in the club in a circle of learning new things in the university and apply them in our trainings after. Some of our actvites in previous semesters are :</p>
             <ul>
-              <li><a href="/problem-solving-fall-2018.html">Problem Solving training(fall 2018).</a></li>
-              <li><a href="/problem-solving-spring-2018.html">Problem Solving training(spring 2018).</a></li>
+              <li><a href="problem-solving-fall-2018.html">Problem Solving training(fall 2018).</a></li>
+              <li><a href="problem-solving-spring-2018.html">Problem Solving training(spring 2018).</a></li>
               <li>Java training(spring 2018).</li>
               <li><a href="https://drive.google.com/file/d/1CY31hfAIp0zg2_WzqTj3b5PhDRmWZWFa/view">JUCPC Contest preparations and organization (spring 2018).</a></li>
               <li><a href="https://codeforces.com/group/N716CDOV1U/contest/225028">JU Mirror Contest (summer 2018).</a></li>
@@ -127,6 +127,7 @@
     <footer class="py-5 bg-dark">
       <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; JU Programming Club 2018</p>
+        <p class="m-0 text-center text-white">Made by: Ayah Ramahi</p>
       </div>
       <!-- /.container -->
     </footer>
