--- a/problem-solving-fall-2018.html
+++ b/problem-solving-fall-2018.html
@@ -56,7 +56,7 @@
           </br>
 
           <h4 id="about">About</h4>
-          <p> This semester we are giving a beginner problem solving training that basically has included basic subjects in <a href="https://en.wikipedia.org/wiki/Competitive_programming">competitive programming</a> and in C++ language that helps to solve mathematical and computational problems. We then started with some basic algorithms related to searching. Each week included 3 classes with 1 hour each and was presented by our team.</p>
+          <p> This semester we are giving a beginner problem solving training that basically includes basic subjects in <a href="https://en.wikipedia.org/wiki/Competitive_programming">competitive programming</a> and in C++ language that helps to solve mathematical and computational problems. This trainig contests of 3 hours a week as 1 hour for 3 days. Sunday and Tuesday have 2 lectures that explain the material of the week and Thursday has 1 hour in the lab where we solve problems about the material explained before.</p>
 
           </br>
 
@@ -77,7 +77,17 @@
             <!-- Week 1 -->
             <li>
               <h5>Week 1</h5>
-              <h6><a href="/slides/week1.pdf">Slides</a></h6>
+              <p>This week we talked about C++ syntax and basics.</p>
+              <ul>
+                <li><a href="slides/week1.pdf" download>Slides</a></li>
+                <li><a href="http://codeforces.com/group/N716CDOV1U/contest/231420?fbclid=IwAR3rO_N6AsQGg7DmvaPgR8k2TBJ-MhNuDfBYnUcthMiPecJ9I9YR7ccYp8M">Contest</a></li>
+              </ul>
+            </li>
+          </br>
+            <!-- Week 2 -->
+            <li>
+              <h5>Week 2</h5>
+              <p>This week we talked about Data Structures like: Vector, Set, Map.</p>
             </li>
           </ul>
         </br>
@@ -108,6 +118,7 @@
     <footer class="py-5 bg-dark">
       <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; JU Programming Club 2018</p>
+        <p class="m-0 text-center text-white">Made by: Ayah Ramahi</p>
       </div>
       <!-- /.container -->
     </footer>
