--- a/problem-solving-spring-2018.html
+++ b/problem-solving-spring-2018.html
@@ -155,6 +155,7 @@
     <footer class="py-5 bg-dark">
       <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; JU Programming Club 2018</p>
+        <p class="m-0 text-center text-white">Made by: Ayah Ramahi</p>
       </div>
       <!-- /.container -->
     </footer>
