--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
             <h5>Have a suggestion for us? <a href="https://goo.gl/forms/4QdthhWtAT7DodkH3">
               Submit here.</a></h5>
             <h5>Wanna join our team? <a href="https://goo.gl/forms/Jrs0ofskRISOjBKF2">Submit here.</a></h5>
+            <h5> Like <a href="https://www.facebook.com/JU.SOE.PC/"> our page</a> to keep up with our activities and meetings all the time.</h5>
           </div>
         </div>
       </div>
