--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             <h2>Activities</h2>
             <p class="lead">Our team in the club provides engaging activites every semester to keep our people in the club in a circle of learning new things in the university and apply them in our trainings after. Some of our actvites in previous semesters are :</p>
             <ul>
+              <li><a href="problem-solving-spring-2019.html">Problem Solving training(Spring 2019).</a></li>
               <li><a href="problem-solving-fall-2018.html">Problem Solving training(fall 2018).</a></li>
               <li><a href="problem-solving-spring-2018.html">Problem Solving training(spring 2018).</a></li>
               <li>Java training(spring 2018).</li>
