--- a/problem-solving-spring-2019.html
+++ b/problem-solving-spring-2019.html
@@ -54,8 +54,8 @@
         <div class="col-lg-12">
 
           <h1 class="mt-5 text-center">Problem Solving training(spring 2019)</h1>
-		  </br>
-		  <img src="spring_2019_ps_adv.png">
+	  </br>
+	  <img src="img/spring_2019_ps_adv.png">
 
           </br>
           <hr>
