--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#activities">Activities</a>
             </li>
+			<li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
@@ -109,6 +112,19 @@
     </section>
 
     </br>
+	
+	<section id="gallery">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>Gallery</h2>
+            <ul> <li> <a href="gallery.html"> Link to photos gallery </a></li> </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+	
+	</br>
 
     <section id="contact">
       <div class="container">
