--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
     <div class="container content">
 
       <!-- Page Heading -->
-      <h1 class="my-4 heading">Volunteers</h1>
+      <h1 class="my-4 heading">Gallery</h1>
 	<hr>
 	</br>
 
